# kopete

./: .directory  .emacs-dirvars  .flatpak-manifest.json  .gitlab-ci.yml  .kde-ci.yml  .krazy  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  HACKING  IDENTITY_REFACTORY  INSTALL  INSTALL.new  KABC_INTEG_NOTES  Mainpage.dox  Makefile.am  Messages.sh  NEWS  PORTING_KDE4  README  ROADMAP  TODO  TODO_PORTING  VERSION  config-kopete.h.cmake  configure.in.bot  configure.in.in  kopete.api  kopete.categories  kopete.kdev4  kopete.kdevelop  kopete.kdevprj  kopete.kdevses
chatwindow/tests/: CMakeLists.txt  archivefactory_test.cpp  archivefactory_test.h  chatwindowstyle_test.cpp  chatwindowstyle_test.h  chatwindowstylerendering_test.cpp  chatwindowstylerendering_test.h  kopeterichtextwidget_test.cpp  kopeterichtextwidget_test.h
doc-dev/t1/: CMakeLists.txt  kopete_tutorialplugin.desktop
doc-dev/t2/: CMakeLists.txt  kopete_tutorialplugin.desktop  tutorialplugin.cpp  tutorialplugin.h
doc-dev/t3/: CMakeLists.txt  kopete_tutorialplugin.desktop  kopete_tutorialplugin_config.desktop  tutorialplugin.cpp  tutorialpreferences.cpp  tutorialpreferences.h
doc/t1/: CMakeLists.txt  kopete_tutorialplugin.desktop
doc/t3/: CMakeLists.txt  kopete_tutorialplugin.desktop  kopete_tutorialplugin_config.desktop  tutorialpreferences.cpp  tutorialpreferences.h  tutorialprefs.ui
kio_kopete/: Makefile.am  kio_kopete.cpp  kio_kopete.h  kopete.protocol
kopete/: CMakeLists.txt  Makefile.am  crsc-app-kopete2.svgz  eventsrc  groupkabcselectorwidget.ui  hisc-apps-kopete-offline.svgz  infoeventbase.ui  infoeventwidget.cpp  infoeventwidget.h  kanimatedsystemtrayicon.cpp  kanimatedsystemtrayicon.h  kimiface.h  kimifaceimpl.cpp  kimifaceimpl.h  kopete.cpp  kopete.desktop  kopete.h  kopete.notifyrc  kopete.qrc  kopeteaccountstatusbaricon.cpp  kopeteaccountstatusbaricon.h  kopeteapplication.cpp  kopeteapplication.h  kopeteballoon.cpp  kopeteballoon.h  kopetedbusinterface.cpp  kopetedbusinterface.h  kopetedbusinterface_p.cpp  kopetedbusinterface_p.h  kopeteeditglobalidentitywidget.cpp  kopeteeditglobalidentitywidget.h  kopeteglobalawaydialog.cpp  kopeteglobalawaydialog.h  kopeteidentitystatusbaricon.cpp  kopeteidentitystatusbaricon.h  kopeteiface.cpp  kopeteiface.h  kopeteprotocolstatusbaricon.cpp  kopeteprotocolstatusbaricon.h  kopeteui.rc  (+10 more)
kopete/addaccountwizard/: CMakeLists.txt  Makefile.am  addaccountwizard.cpp  addaccountwizard.h  addaccountwizardpage1.ui  addaccountwizardpage2.ui  addaccountwizardpage3.ui
kopete/addcontactwizard/: CMakeLists.txt  Makefile.am  addcontactwizard.cpp  addcontactwizard.h  addcontactwizard_base.ui  fastaddcontactwizard.cpp  fastaddcontactwizard.h  fastaddcontactwizard_base.ui
kopete/addidentitywizard/: CMakeLists.txt  addidentitywizard.cpp
kopete/chatwindow/: CMakeLists.txt  Makefile.am  chatmemberslistview.cpp  chatmemberslistview.h  chatmemberslistwidget.cpp  chatmemberslistwidget.h  chatmessagepart.cpp  chatmessagepart.h  chattexteditpart.cpp  chattexteditpart.h  chatview.cpp  chatview.h  chatwindow.desktop  emailwindow.desktop  emoticonselector.cpp  emoticonselector.h  kopetechatwindow.cpp  kopetechatwindow.h  kopetechatwindow.qrc  kopetechatwindow.rc  kopetechatwindowsettings.kcfg  kopetechatwindowsettings.kcfgc  kopetechatwindowstyle.cpp  kopetechatwindowstyle.h  kopetechatwindowstylemanager.cpp  kopetechatwindowstylemanager.h  kopeteemailwindow.cpp  kopeteemailwindow.h  kopeteemailwindow.rc  kopeteemoticonaction.cpp  kopeteemoticonaction.h  kopeterichtexteditpartfull.rc  kopeterichtexteditpartsimple.rc  kopeterichtextwidget.cpp  kopeterichtextwidget.h  kopetetabwidget.cpp  kopetetabwidget.h  kopeteviewmanager.cpp  kopeteviewmanager.h  krichtexteditpart.cpp  (+4 more)
kopete/conf/: Makefile.am  accountconfig.cpp  accountconfig.h  accountconfigbase.ui  addaccountwizard.cpp  addaccountwizard.h  addaccountwizardpage1.ui  addaccountwizardpage2.ui  addaccountwizardpage3.ui  appearanceconfig.cpp  appearanceconfig.h  appearanceconfig_chatwindow.ui  appearanceconfig_colors.ui  behaviorconfig.cpp  behaviorconfig.h  behaviorconfig_chat.ui  behaviorconfig_general.ui  kopeteawayconfigbase.ui  kopeteawayconfigui.cpp  kopeteawayconfigui.h  pluginconfig.cpp  pluginconfig.h  styleeditdialog.ui
kopete/config/: CMakeLists.txt  Makefile.am  kopete_pluginconfig.desktop  kopetepluginpage.cpp  kopetepluginpage.h
kopete/contactlist/: CMakeLists.txt  CompactContactListLayouts.xml  DefaultContactListLayouts.xml  Makefile.am  configure.in.in  contactlistlayoutitemconfig.cpp  contactlistlayoutitemconfig.h  contactlistlayoutmanager.cpp  contactlistlayoutmanager.h  contactlistmodel.cpp  contactlistmodel.h  contactlistplainmodel.cpp  contactlistplainmodel.h  contactlistproxymodel.cpp  contactlistproxymodel.h  contactlisttreemodel.cpp  contactlisttreemodel.h  contactlisttreemodel_p.h  customnotificationprops.cpp  customnotificationprops.h  kabcexport.cpp  (+40 more)
libkopete/: API-TODO  CMakeLists.txt  Mainpage.dox  Makefile.am  PORTING  chatsessionmemberslistmodel.cpp  chatsessionmemberslistmodel.h  clientadaptor.cpp  clientadaptor.h  clientiface.h  configure.in.in  connectionmanager.cpp  connectionmanager.h  kabcpersistence.cpp  kabcpersistence.h  kautoconfig.cpp  kautoconfig.h  kcautoconfigmodule.cpp  kcautoconfigmodule.h  knotification.cpp  knotification.h  knotificationmanager.cpp  knotificationmanager.h  knotifydialog.cpp  kopete.kcfg  kopete_export.h  kopete_export.h.in  kopeteaccount.cpp  kopeteaccount.h  kopeteaccountmanager.cpp  kopeteaccountmanager.h  kopeteaddedinfoevent.cpp  kopeteaddedinfoevent.h  kopeteappearancesettings.kcfg  kopeteappearancesettings.kcfgc  kopeteavatarmanager.cpp  kopeteavatarmanager.h  kopeteaway.cpp  kopeteaway.h  kopeteawayaction.cpp  (+146 more)
plugins/: CMakeLists.txt  Makefile.am
protocols/: CMakeLists.txt  Makefile.am  configure.in.bot  configure.in.in
sounds/: CMakeLists.txt  Makefile.am
styles/: Adium.xsl  Adium_JS.xsl  CMakeLists.txt  Enclosed.xsl  Gaim.xsl  Keramik.xsl  Konsole.xsl  Kopete-old.xsl  Kopete.xsl  MSN.xsl  Makefile.am  Minimal.xsl  XChat.xsl  extracti18n  iChat.xsl
(+5334 files in other folders)
